tests/valid/valid_optionality_defaults.csl
config Defaults {
  env: "dev" | "staging" | "prod" = "dev";
  retry?: number = 3;
}
