tests/invalid/invalid_default_type_mismatch.csl
config InvalidDefaultType {
  port: number = "8080";
}
